              (Noble Paul via shalin)
              
33.SOLR-1153: 'deltaImportQuery' is honored on child entities as well (noble) 

34.SOLR-1230: Enhanced dataimport.jsp to work with all DataImportHandler request handler configurations,
              rather than just a hardcoded /dataimport handler. (ehatcher)
              
35.SOLR-1235: disallow period (.) in entity names (noble)

36.SOLR-1234: Multiple DIH does not work because all of them write to dataimport.properties. Use the handler name as the properties file name (noble)

Optimizations
----------------------
1. SOLR-846:  Reduce memory consumption during delta import by removing keys when used
              (Ricky Leung, Noble Paul via shalin)

2. SOLR-974:  DataImportHandler skips commit if no data has been updated.
              (Wojtek Piaseczny, shalin)

3. SOLR-1004: Check for abort more frequently during delta-imports.
              (Marc Sturlese, shalin)

4. SOLR-1098: DateFormatTransformer can cache the format objects.
              (Noble Paul via shalin)

Bug Fixes
----------------------
1. SOLR-800:  Deep copy collections to avoid ConcurrentModificationException in XPathEntityprocessor while streaming
              (Kyle Morrison, Noble Paul via shalin)

2. SOLR-823:  Request parameter variables ${dataimporter.request.xxx} are not resolved
              (Mck SembWever, Noble Paul, shalin)

3. SOLR-728:  Add synchronization to avoid race condition of multiple imports working concurrently
              (Walter Ferrara, shalin)

4. SOLR-742:  Add ability to create dynamic fields with custom DataImportHandler transformers
              (Wojtek Piaseczny, Noble Paul, shalin)

5. SOLR-832:  Rows parameter is not honored in non-debug mode and can abort a running import in debug mode.
              (Akshay Ukey, shalin)

6. SOLR-838:  The VariableResolver obtained from a DataSource's context does not have current data.
              (Noble Paul via shalin)
